make test-status always run

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: All Tests
 
-run-name: ${{ inputs.test_name }}${{ inputs.test_dbs }}${{ inputs.run_single_test_mode }}
+run-name: ${{ inputs.test_name }}${{ inputs.test_dbs }}${{ inputs.run_single_test_job }}
 
 on:
   pull_request:
@@ -15,14 +15,14 @@ on:
       commit:
         description: "Commit SHA"
         required: true
-      run_single_test_mode:
-        description: "Which type of single test to run"
+      run_single_test_job:
+        description: "Which job to run a single test in"
         type: choice
         options:
-          - 'unit'
-          - 'functional'
-          - 'functional-xdc'
-          - 'functional-ndc'
+          - 'unit-test'
+          - 'functional-test'
+          - 'functional-test-xdc'
+          - 'functional-test-ndc'
       unit_test_directory:
         description: "[Unit Test Only] Directory to run unit tests in"
         type: string
@@ -82,7 +82,7 @@ jobs:
           shards=3
           timeout=30
           runs_on='["ubuntu-20.04"]'
-          if [[ "${{ inputs.run_single_test_mode }}" != "" ]]; then
+          if [[ "${{ inputs.run_single_test_job }}" != "" ]]; then
             shards=1
             timeout=${{ inputs.timeout_minutes }}
             single_test_args="-run ${{ inputs.test_name }} -count ${{ inputs.n_runs }}"
@@ -111,7 +111,7 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -119,28 +119,28 @@ jobs:
           fetch-depth: 100
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - uses: arduino/setup-protoc@v3
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
 
       - run: GOOS=windows GOARCH=amd64 make clean-bins bins
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
 
       - run: GOOS=darwin GOARCH=arm64 make clean-bins bins
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
 
       - run: make clean-bins ci-build-misc
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
 
       - run: make build-tests
-        if: ${{ inputs.run_single_test_mode == '' }}
+        if: ${{ inputs.run_single_test_job == '' }}
 
   unit-test:
-    if: ${{ inputs.run_single_test_mode == '' || inputs.run_single_test_mode == 'unit' }}
+    if: ${{ inputs.run_single_test_job == '' || inputs.run_single_test_job == 'unit-test' }}
     name: Unit test
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -166,12 +166,12 @@ jobs:
           check-latest: true
 
       - name: Run unit tests
-        if: ${{ !cancelled() && inputs.run_single_test_mode != 'unit' }}
+        if: ${{ !cancelled() && inputs.run_single_test_job != 'unit-test' }}
         timeout-minutes: 15
         run: make unit-test-coverage
 
       - name: Run single unit test
-        if: ${{ !cancelled() && inputs.run_single_test_mode == 'unit' }}
+        if: ${{ !cancelled() && inputs.run_single_test_job == 'unit-test' }}
         timeout-minutes: 15
         run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
 
@@ -180,7 +180,7 @@ jobs:
         run: make upload-test-results
 
   integration-test:
-    if: ${{ inputs.run_single_test_mode == '' }}
+    if: ${{ inputs.run_single_test_job == '' }}
     name: Integration test
     needs: misc-checks
     strategy:
@@ -225,7 +225,7 @@ jobs:
           docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
 
   functional-test:
-    if: ${{ inputs.run_single_test_mode == '' || inputs.run_single_test_mode == 'functional' }}
+    if: ${{ inputs.run_single_test_job == '' || inputs.run_single_test_job == 'functional-test' }}
     name: Functional test
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -280,24 +280,24 @@ jobs:
       BUILDKITE_DB: ${{ matrix.persistence_driver }}
     steps:
       - uses: ScribeMD/docker-cache@0.3.7
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           key: docker-${{ runner.os }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
 
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -305,16 +305,16 @@ jobs:
           down-flags: -v
 
       - name: Run functional test
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   functional-test-xdc:
-    if: ${{ inputs.run_single_test_mode == '' || inputs.run_single_test_mode == 'functional-xdc' }}
+    if: ${{ inputs.run_single_test_job == '' || inputs.run_single_test_job == 'functional-test-xdc' }}
     name: Functional test xdc
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -354,19 +354,19 @@ jobs:
       BUILDKITE_DB: ${{ matrix.persistence_driver }}
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -374,16 +374,16 @@ jobs:
           down-flags: -v
 
       - name: Run functional test xdc
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: 30
         run: make functional-test-xdc-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   functional-test-ndc:
-    if: ${{ inputs.run_single_test_mode == '' || inputs.run_single_test_mode == 'functional-ndc' }}
+    if: ${{ inputs.run_single_test_job == '' || inputs.run_single_test_job == 'functional-test-ndc' }}
     name: Functional test ndc
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -431,19 +431,19 @@ jobs:
       BUILDKITE_DB: ${{ matrix.persistence_driver }}
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -451,16 +451,16 @@ jobs:
           down-flags: -v
 
       - name: Run functional test ndc
-        if: ${{ inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_test_mode == '' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_test_job == '' || (inputs.run_single_test_job == 'functional-test-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   test-status:
-    if: ${{ inputs.run_single_test_mode == '' }}
+    if: always()
     name: Test Status
     needs:
       - unit-test
