Add flaky test detection by running modified test suites multiple times
- Update Makefile:
  - Create `collect-modified-tests` target to gather modified test suites per category.
  - Modify test targets to accept `TEST_SUITES` and `N_RUNS` variables.
  - Run modified test suites multiple times using `go test -count=$(N_RUNS)` to detect flaky tests.

- Update GitHub Actions workflows:
  - Update `set-up-single-test` job to collect modified test suites and pass them to test jobs.
  - Adjust test jobs to run modified test suites multiple times per category.
  - Optimize test execution by running tests once per category with all modified suites.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -339,6 +339,9 @@ jobs:
       TEST_SHARD_INDEX: ${{ matrix.shard_index }}
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
+      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+      TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
+      BUILDKITE_MESSAGE: "{\"job\": \"functional-test\", \"db\": \"${{ matrix.persistence_driver }}\"}"
       N_RUNS: 10
       MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_functional_test_suites }}
     steps:
